objects/ActionOverrideTest__c.object
<CustomObject>
    <fields>
        <fullName>ActionTest1__c</fullName>
        <businessOwnerUser>surya.scorchy@self.com</businessOwnerUser>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionOverrideTest</label>
        <referenceTo>ActionOverrideTest__c</referenceTo>
        <relationshipName>ActionOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionTest2__c</fullName>
        <businessOwnerUser>surya.scorchy@self.com</businessOwnerUser>
        <label>ActionTest2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>abc</fullName>
                </value>
                <value>
                    <fullName>def</fullName>
                </value>
                <value>
                    <fullName>efg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_del__c</fullName>
        <label>Case28438</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PicklistTest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactAddress_del__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ActionOverrideTests</relationshipLabel>
        <relationshipName>ActionOverrideTests_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DeleteField1__c</fullName>
        <label>DeleteField1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeleteTab__c</fullName>
        <label>DeleteTab</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCSAField__c</fullName>
        <label>FCSAField</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLSTest__c</fullName>
        <label>FLSTest</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Miss_Final_2__c</fullName>
        <label>Ignore Miss Final 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Miss_Final__c</fullName>
        <label>Ignore Miss Final</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterField__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ActionOverrides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Object</label>
        <referenceTo>New_Object__c</referenceTo>
        <relationshipName>ActionOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override1__c</fullName>
        <businessOwnerUser>surya.scorchy@self.com</businessOwnerUser>
        <label>Override1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override2__c</fullName>
        <label>Override2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override3__c</fullName>
        <label>Override3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PackageTest__c</fullName>
        <label>PackageTest</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>ActionOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>ActionOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ActionOverrideTest</label>
    <nameField>
        <label>ActionOverrideTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActionOverrideTests</pluralLabel>
    <recordTypes>
        <fullName>Action1</fullName>
        <active>true</active>
        <label>Action1</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>